fix hidden overflow

--- a/src/app/components/MainContent/Skills/SkillCard/SkillCard.css
+++ b/src/app/components/MainContent/Skills/SkillCard/SkillCard.css
@@ -69,7 +69,7 @@
 
 .skill-card__meta {
   border: 0.25rem inset var(--black-2);
-  height: 100%;
+  height: 4.5rem;
   padding-top: 1.5rem;
 
   background-image: repeating-linear-gradient(
